# smart-home

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GEMINI.md  Makefile  README.md  docker-compose.yaml  gemini.md  generate_sources.py
.cache/clangd/index/: backdrop_dialog.h.15FB5981271E0B18.idx  device_factory.cpp.0CFBD0A3162DB4C7.idx  device_factory.h.36487FD12EAFEBE1.idx  device_manager.cpp.063685D54475391D.idx  device_manager.h.202B278B602EECE7.idx  device_provider.h.C96563F6764D2B3F.idx  main.cpp.0627B20B6EEBB9B4.idx  main_window.cpp.9C610ECE803C5559.idx  main_window.h.DD564B0289B6B82E.idx  mqtt_capability.h.023F3358CAFB0DF3.idx  smart_device.cpp.A0C8B3E636C22CD0.idx  smart_device.h.4BB4138755393426.idx  smart_light.cpp.09677BE9F212B5E8.idx  smart_light.h.206C326EAB1F9736.idx  smart_light_settings_dialog.h.1239CCD8EDF2A718.idx  smart_light_widget.cpp.64B9B9E4A90402E2.idx  smart_light_widget.h.F613AEC0EC1E2965.idx  utils.cpp.6D34CEAB0889A2D1.idx  utils.h.03BB62B950B8B952.idx  widget_factory.cpp.1EAE153801B23FD5.idx  widget_factory.h.F38954B2E06A3F18.idx  zigbee_light.cpp.FEED4C2301B02D22.idx  zigbee_light.h.4177D252D3C691EE.idx  zigbee_provider.cpp.5E8BC4A876E109E8.idx  zigbee_provider.h.CAF06423F9D69398.idx  zigbee_utils.cpp.4269241BD506EB72.idx  zigbee_utils.h.EFF59C0193BBBCC7.idx
src/: CMakeLists.txt  Dockerfile  Main.qml  device_factory.cpp  device_manager.cpp  main.cpp  main_window.cpp  smart_device.cpp  smart_light.cpp  smart_light_widget.cpp  style.qss  utils.cpp  widget_factory.cpp  zigbee_light.cpp  zigbee_provider.cpp  zigbee_utils.cpp
src/include/: backdrop_dialog.h  device_factory.h  device_manager.h  device_provider.h  main_window.h  mqtt_capability.h  smart_device.h  smart_light.h  smart_light_settings_dialog.h  smart_light_settings_dialog.hpp  smart_light_widget.h  utils.h  widget_factory.h  zigbee_light.h  zigbee_provider.h  zigbee_utils.h
